# Agent-RAG

./: .cursorignore  .dockerignore  .env.example  .gitignore  .trufflehogignore  404.html  CHANGELOG.md  Dockerfile  Dockerfile.api  Dockerfile.mcp  Dockerfile.streamlit  README.md  app.py  coderabbit.yaml  docker-compose.yml  index.html  mcp_server.py  mkdocs.yml  objects.inv  package-lock.json  package.json  pr_description_concise.md  prometheus.yml  pyproject.toml
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: codex.yaml
.bmad/bmb/: config.yaml
.bmad/bmm/: config.yaml
.bmad/cis/: config.yaml
.bmad/core/: config.yaml
.cursor/rules/: supabase-agent.mdc
.github/workflows/: README.md  ci.yml  docs.yml
api/: main.py  models.py
api-reference/: index.html
api-reference/core/: index.html
api-reference/ingestion/: index.html
api-reference/utils/: index.html
architecture/: index.html
client/: __init__.py  api_client.py
coding-standards/: index.html
core/: agent.py  rag_service.py
development-guide/: index.html
docling_mcp/: __init__.py  health.py  http_server.py  lifespan.py  metrics.py  server.py
docling_mcp/tools/: __init__.py  documents.py  overview.py  search.py
docs/: analisi-progetto-linkedin.md  architecture.md  bmm-workflow-status.yaml  coding-standards.md  data-retention-strategy.md  docker-optimization-guide.md  epics.md  health-check-endpoints.md  index.md  prd.md  project-overview.md  testing-strategy.md  unified-project-structure.md  ux-color-themes.html  ux-design-specification.md
docs/documents/: api-and-data-analysis.md  deep-dive-ingestion.md  deep-dive-mcp.md  development-guide.md  implementation-readiness-report-2025-11-26-final.md  implementation-readiness-report-2025-11-26.md  mcp-troubleshooting-overview.md  optimization-deployment.md  optimization-summary.md  performance-optimization-guide.md  refactoring-opportunities.md  research-technical-2025-11-26.md  sql-migration-guide.md  technical-requirements-analysis.md  test-design-system.md  validation-report-architecture-2025-11-26.md  validation-report-prd-2025-11-26-final.md
docs/stories/: sprint-status.yaml
docs/stories/1/: epic-1-retro-2025-11-27.md  tech-spec-epic-1.md
docs/stories/1/1-1/: 1-1-document-current-architecture.context.xml  1-1-document-current-architecture.md  1-1-gap-analysis-report.md  validation-report-1-1-document-current-architecture-2025-11-26.md  validation-report-story-context-1-1-2025-11-26.md
docs/stories/1/1-2/: 1-2-generate-api-reference-documentation.context.xml  1-2-generate-api-reference-documentation.md  validation-report-1-2-generate-api-reference-documentation-2025-11-26.md  validation-report-1-2-generate-api-reference-documentation-context-2025-11-26.md
docs/stories/1/1-3/: 1-3-create-production-ready-readme.context.xml  1-3-create-production-ready-readme.md  validation-report-1-3-create-production-ready-readme-2025-11-27.md  validation-report-story-context-1-3-2025-11-27.md
docs/stories/1/1-4/: 1-4-centralize-documentation-and-add-troubleshooting-guide.context.xml  1-4-centralize-documentation-and-add-troubleshooting-guide.md  validation-report-1-4-centralize-documentation-and-add-troubleshooting-guide-2025-11-27.md  validation-report-story-context-1-4-2025-11-27.md
docs/stories/2/: epic-2-retro-2025-01-27.md  tech-spec-epic-2.md  validation-report-tech-spec-epic-2-2025-11-26.md
docs/stories/2/2-1/: 2-1-integrate-langfuse-sdk.md  (+3 more)
docs/stories/3/: epic-3-documentation-gaps-analysis.md  epic-3-documentation-status.md  epic-3-retro-2025-01-27.md  epic-3-security-hardening-guide.md  epic-3-setup-guide.md  tech-spec-epic-3.md  validation-report-tech-spec-epic-3-20250127.md
docs/stories/4/: epic-4-retro-2025-01-30.md  epic-4-setup-guide.md  tech-spec-epic-4.md  validation-report-tech-spec-epic-4-2025-01-27.md
docs/stories/5/: epic-5-retro-2025-12-02.md  tech-spec-epic-5.md  validation-report-tech-spec-epic-5.md
docs/stories/6/: tech-spec-epic-6.md  validation-report-20251202_140524.md
epics/: index.html
getting-started/: index.html
guide/: architecture.md  development-guide.md  getting-started.md  index.md  langfuse-dashboard-guide.md  troubleshooting-guide.md  unified-project-structure.md
guide/api-reference/: core.md  index.md  ingestion.md  utils.md
ingestion/: __init__.py  chunker.py  chunker_no_docling.py  embedder.py  ingest.py
langfuse-dashboard-guide/: index.html
prd/: index.html
screenshot/: README.md
scripts/: optimize_database.py  test_cost_tracking.py  test_mcp_performance.py
scripts/debug/: debug_mcp_tools.py
scripts/testing/: test_e2e_langfuse_timing.py
scripts/validation/: __init__.py  validate_imports.py  validate_structure.py
scripts/verification/: verify_api.py  verify_api_endpoints.py  verify_client_integration.py  verify_mcp_setup.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api-reference/: index.html
site/api-reference/core/: index.html
site/api-reference/ingestion/: index.html
site/api-reference/utils/: index.html
site/search/: search_index.json
sql/: 01-init-schema.sql  epic-3-sessions-schema.sql  epic-3-verify-setup.sql  optimize_index.sql
testing-strategy/: index.html
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_streamlit_ui_observability.py  test_streamlit_workflow.py
tests/e2e/screenshots/: .gitkeep
tests/evaluation/: __init__.py  test_ragas_evaluation.py
tests/fixtures/: __init__.py  golden_dataset.json
tests/integration/: test_api_health.py  test_langfuse_dashboard.py  test_mcp_server_integration.py  test_observability_endpoints.py  test_streamlit_observability.py
tests/unit/: test_api_client.py  test_embedder.py  test_health.py  test_http_server.py  test_langfuse_integration.py  test_langfuse_streamlit.py  test_mcp_server_validation.py  test_performance_metrics.py  test_rag_service.py  test_session_manager.py
troubleshooting-guide/: index.html
utils/: __init__.py  db_utils.py  langfuse_streamlit.py  models.py  providers.py  session_manager.py
(+64 files in other folders)
